# flowbee

./: CMakeLists.txt  LICENSE  README.md
example_input/: flow.json  gravity.json  perturbed_circular.json  perturbed_spiral.json
src/: brush.cpp  brush.hpp  canvas.cpp  canvas.hpp  flowbee.cpp  flowbee.hpp  gui.cpp  gui.hpp  image.cpp  image.hpp  input.cpp  input.hpp  main.cpp  matrix.hpp  matrix_3d.hpp  paint.cpp  paint.hpp  paint_mixture.cpp  paint_mixture.hpp  paint_particle.cpp  paint_particle.hpp  pigment.cpp  pigment.hpp  types.hpp  util.cpp  util.hpp  vec2.hpp  vec3.hpp  vector_field.cpp  vector_field.hpp
